# GenshinDataManagementAPI

./: Dockerfile  README.md  pyproject.toml  rebuild_docker.sh
api/: db.py  main.py  migrate_db.py  settings.py
app/: pyproject.toml  start_server.sh
app/api/: db.py  main.py  migrate_db.py
app/api/cruds/: user.py
app/api/models/: base.py  user.py
app/api/routers/: user.py
app/api/schemas/: create_schema.py  user.py
app/api/validates/: user.py
app/datas/: db.sqlite
docs/: er.pu
