[tool.poetry]
name = "TaskManagementAPI"
version = "0.1.0"
description = ""
authors = ["Sylphy0052"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
