[tool.poetry]
name = "genshin_data_management_api"
version = "0.1.0"
description = ""
authors = ["Sylphy0052"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
pyproject-flake8 = "6.1.0"
mypy = "^1.8.0"
isort = "^5.13.2"
black = "^23.12.1"
typing-extensions = "^4.9.0"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
