[tool.poetry]
name = "genshindatamanagementapi"
version = "0.1.0"
description = ""
authors = ["Sylphy0052"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
typing-extensions = "^4.9.0"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
